--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1883,8 +1883,8 @@ input, select, textarea {
 		input[type="button"]:hover,
 		button:hover,
 		.button:hover {
-			box-shadow: inset 0 0 0 2px #D0C92C;
-			color: #D0C92C !important;
+			box-shadow: inset 0 0 0 2px #ADA841;
+			color: #ADA841 !important;
 		}
 
 		input[type="submit"]:active,
@@ -1893,8 +1893,8 @@ input, select, textarea {
 		button:active,
 		.button:active {
 			background-color: rgba(73, 252, 212, 0.25);
-			box-shadow: inset 0 0 0 2px #D0C92C;
-			color: #D0C92C !important;
+			box-shadow: inset 0 0 0 2px #ADA841;
+			color: #ADA841 !important;
 		}
 
 		input[type="submit"].small,
@@ -1971,7 +1971,7 @@ input, select, textarea {
 			input[type="button"].primary:hover,
 			button.primary:hover,
 			.button.primary:hover {
-				background-color: #D0C92C;
+				background-color: #ADA841;
 			}
 
 			input[type="submit"].primary:active,
@@ -1979,7 +1979,7 @@ input, select, textarea {
 			input[type="button"].primary:active,
 			button.primary:active,
 			.button.primary:active {
-				background-color: #D0C92C;
+				background-color: #ADA841;
 			}
 
 		@media screen and (max-width: 736px) {
@@ -2249,15 +2249,15 @@ input, select, textarea {
 		input[type="checkbox"]:checked + label:before,
 		input[type="radio"]:checked + label:before {
 			content: '\f00c';
-			background-color: #D0C92C;
-			border-color: #D0C92C;
+			background-color: #ADA841;
+			border-color: #ADA841;
 			color: #ffffff;
 		}
 
 		input[type="checkbox"]:focus + label:before,
 		input[type="radio"]:focus + label:before {
-			border-color: #D0C92C;
-			box-shadow: 0 0 0 1px #D0C92C;
+			border-color: #ADA841;
+			box-shadow: 0 0 0 1px #ADA841;
 		}
 
 	input[type="checkbox"] + label:before {
@@ -3879,4 +3879,10 @@ input, select, textarea {
 			padding: 4rem;
 		}
 
+	}
+
+	.resume-btn {
+		justify-content: center;
+  	align-items: center;
+		margin: 10px 50px;
 	}
