--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3881,8 +3881,18 @@ input, select, textarea {
 
 	}
 
+	/* .resume-btn {
+		margin: 0 auto;
+	} */
+
+	@media screen and (min-width: 480px) {
 	.resume-btn {
-		justify-content: center;
-  	align-items: center;
 		margin: 10px 50px;
+	}
+}
+
+	embed {
+		margin: 0px 20px 0px 0px;
+		width: 100%;
+		height: 375;
 	}
